# hubris-riscv-hazard3

./: .gitignore  CLAUDE.md  Cargo.toml  LEARNING_GUIDE.md  STARTUP_EXPLAINED.md  justfile  rust-toolchain.toml  scratchpad.md
app/demo-pi-pico-2/: app.toml
app/demo-rp2350-hazard3/: Cargo.toml  README.md  app.toml
app/demo-rp2350-hazard3/.cargo/: config.toml
app/demo-rp2350-hazard3/src/: main.rs
app/demo-stm32f4-discovery/: Cargo.toml
app/learn-boot/layer0-startup/: Cargo.toml  README.md  build.rs  link.x
app/learn-boot/layer0-vector-table/: Cargo.toml  README.md  memory.x
app/learn-boot/layer0-vector-table/.cargo/: config.toml
app/learn-boot/layer0-vector-table/src/: main.rs
app/lpc55xpresso/: Cargo.toml  app.toml
boards/: rp2350-hazard3.toml  stm32f4-discovery.toml
chips/rp2350-hazard3/: chip.toml  memory.toml  openocd.cfg  openocd.gdb
chips/rp235x/: chip.toml
drv/rp235x-gpio/: Cargo.toml
drv/rp235x-gpio/src/: lib.rs
drv/stm32fx-rcc/: Cargo.toml
drv/stm32fx-rcc/src/: main.rs
drv/stm32fx-usart/: Cargo.toml
drv/stm32fx-usart/src/: main.rs
drv/user-leds/: Cargo.toml
drv/user-leds/src/: main.rs
sys/kern/: Cargo.toml  build.rs
sys/kern/src/: startup.rs  syscalls.rs  task.rs
sys/kern/src/arch/: arm_m.rs  riscv32.rs
sys/kipc/: Cargo.toml
sys/userlib/: Cargo.toml
sys/userlib/src/: lib.rs
sys/userlib/src/arch/: arm_m.rs  riscv32.rs
task/blinky/: Cargo.toml  README.mkdn
task/blinky/src/: main.rs
task/idle-riscv32/: Cargo.toml
task/idle-riscv32/src/: main.rs
task/idle/src/: main.rs
task/minisuper/: Cargo.toml
test/tests-stm32fx/: Cargo.toml
