[package]
edition = "2021"
readme = "README.md"
name = "demo-rp2350-hazard3"
version = "0.1.0"

[dependencies]
[target.riscv32imac-unknown-none-elf.dependencies]
riscv = { version = "0.14", features = ["critical-section-single-hart"] }
riscv-rt = { version = "0.15" }
rp235x-pac = {version = "0.1.0", features = ["critical-section", "rt"]}
sha2-const-stable = "0.1"
kern = { path = "../../sys/kern", features = ["stack-watermark"] }

# this lets you use `cargo fix`!
[[bin]]
name = "demo-rp2350-hazard3"
test = false
doctest = false
bench = false

[lints]
workspace = true
