[package]
name = "kern"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = { workspace = true }
byteorder = { workspace = true }
cfg-if = { workspace = true }
serde = { workspace = true }
ssmarshal = { workspace = true }
zerocopy = { workspace = true }
zerocopy-derive = { workspace = true }

abi = { path = "../abi" }
phash = { path = "../../lib/phash" }
unwrap-lite = { path = "../../lib/unwrap-lite" }
kerncore.path = "../kerncore"

[target.'cfg(target_arch = "arm")'.dependencies]
armv8-m-mpu = { path = "../../lib/armv8-m-mpu" }
cortex-m = { workspace = true }
cortex-m-semihosting = { workspace = true }

[target.'cfg(target_arch = "riscv32")'.dependencies]
riscv = { workspace = true }
riscv-semihosting = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
indexmap = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
syn = { workspace = true }

abi = { path = "../abi" }
build-kconfig = { path = "../../build/kconfig" }
build-util = { path = "../../build/util" }
call_rustfmt = { path = "../../build/call_rustfmt" }
phash-gen = { path = "../../build/phash-gen" }

[features]
dump = []
nano = []
stack-watermark = []

[lib]
test = false
doctest = false
bench = false

[lints]
workspace = true
