[package]
name = "task-idle-riscv32"
version = "0.1.0"
edition = "2021"

[dependencies]
# The idle task cannot panic, so we deliberately don't request panic-messages
# to keep the binary tiny.
userlib = { path = "../../sys/userlib" }

riscv = { workspace = true }

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "task-idle-riscv32"
test = false
bench = false

[lints]
workspace = true
